added navbar updates

--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
         <footer>
             <div class="container-footer">
                 <h4>
-                © Mérida Sky Gazers | Built by <a href="https://www.indie-virtual.com/">Indie Virtual</a> courtesy of the NASA APOD API <br> Background graphic by <a href="https://www.freepik.com/free-photo/galaxy-night-landscape_13140066.htm#query=space&position=30&from_view=search&track=sph">Freepik</a>
+                © Mérida Sky Gazers | Built by <a href="https://www.gwendolynasani.me/" target="_blank" >Gwendolyn Asani </a> courtesy of the NASA APOD API <br> Background graphic by <a href="https://www.freepik.com/free-photo/galaxy-night-landscape_13140066.htm#query=space&position=30&from_view=search&track=sph">Freepik</a>
                 </h4>
             </div> 
         </footer>
     </div>
-
     <script type="text/javascript" src="js/main.js"></script>
-    
 </body>
 </html>
