--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <footer>
             <div class="container-footer">
                 <h4>
-                © Mérida Sky Gazers | Built by <a href="https://www.gwendolynasani.me/" target="_blank">Gwendolyn Asani</a> courtesy of the NASA APOD API <br> Background graphic by <a href="https://www.freepik.com/free-photo/galaxy-night-landscape_13140066.htm#query=space&position=30&from_view=search&track=sph" target="_blank">Freepik</a>
+                © Mérida Sky Gazers | Built by <a href="https://www.gwendolynasani.com/" target="_blank">Gwendolyn Asani</a> courtesy of the NASA APOD API <br> Background graphic by <a href="https://www.freepik.com/free-photo/galaxy-night-landscape_13140066.htm#query=space&position=30&from_view=search&track=sph" target="_blank">Freepik</a>
                 </h4>
             </div> 
         </footer>
