chore: commented notes for update mig prep

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="full-pg">
+    <div class="full-pg">  
+        <!-- update: header -->
         <nav class="navbar">
             <div class="container">
                 <div class="logo">Mérida Sky Gazers</div>
                 <div class="meeting">Join Us @ MELO's  Thursdays | 7pm</div>
             </div>
         </nav>
+        <!-- update: main -->
         <main>
             <h1>Journey Through the Cosmos</h1>
             <h2>Here, you can access the NASA Astronomy Picture of the Day (APOD) and marvel at some of the most stunning celestial images captured by NASA's telescopes and spacecraft.</h2>
@@ -24,6 +26,7 @@
             <img id="img" style="display: none;" src="" alt="">
             <h3 id="overview" style="display: none;"></h3>
         </main>
+        <!-- update: footer -->
         <footer>
             <div class="container-footer">
                 <h4>
